--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser-dynamic": "^14.2.8",
     "@angular/router": "^14.2.8",
     "bootstrap": "^5.2.0",
+    "firebase": "^10.6.0",
     "ng-circle-progress": "^1.6.0",
     "ngx-toastr": "^15.2.1",
     "rxjs": "~7.5.0",
